[package]
name = "ru-wasm-simple-app"
version = "0.1.0"
authors = ["shadowcow <shadowcow84@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rainbow-unicorn-wasm = { path = "../../."}
rainbow-unicorn = { git = "https://github.com/shadowCow/rainbow-unicorn" }
js-sys = "0.3.17"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"